# ohao_ide

./: CMakeLists.txt  LICENSE  README.md  ohao-ide.spec  resources.qrc
resources/styles/: dark.qss
src/: browserview.cpp  browserview.h  codeeditor.cpp  codeeditor.h  contentview.cpp  contentview.h  cpphighlighter.cpp  cpphighlighter.h  dockmanager.cpp  dockmanager.h  dockwidgetbase.h  filepreview.cpp  filepreview.h  invertedpdfview.cpp  invertedpdfview.h  main.cpp  mainwindow.cpp  mainwindow.h  preferencesdialog.cpp  preferencesdialog.h  projecttree.cpp  projecttree.h  sessionsettings.cpp  sessionsettings.h  shortcutmanager.cpp  terminal.cpp  terminal.h  terminalwidget.cpp  terminalwidget.h  welcomeview.h
src/codeeditor/: bracketmatching.cpp  bracketmatching.h  codeeditor.cpp  codeeditor.h  customtextedit.cpp  customtextedit.h  folding.cpp  folding.h  linenumberarea.cpp  linenumberarea.h  lspintegration.cpp  lspintegration.h  quotematching.cpp  quotematching.h  search.cpp  search.h
src/highlighters/: basehighlighter.h  cpphighlighter.cpp  cpphighlighter.h
src/lsp/: lspclient.cpp  lspclient.h
src/settings/: keyboardshortcutsdialog.cpp  keyboardshortcutsdialog.h  sessionsettings.cpp  sessionsettings.h  shortcutmanager.h
src/views/: dockmanager.h
src/views/browser/: browserview.cpp
src/views/content/: contentview.cpp  contentview.h  filepreview.h  invertedpdfview.cpp  invertedpdfview.h
src/views/terminal/: commandlineedit.h  terminal.h  terminalwidget.h
src/views/welcome/: welcomeview.cpp
